fix thumbnail title alignment

--- a/src/components/Thumbnail.module.css
+++ b/src/components/Thumbnail.module.css
@@ -18,6 +18,7 @@
   font-weight: 500;
   width: 70%;
   color: white;
+  text-align: start;
 }
 
 .thumbnail img {
